--- a/build.gradle
+++ b/build.gradle
@@ -2,21 +2,25 @@ group 'uk.co.rodderscode.bbc.fetcher'
 version '1.0'
 
 apply plugin: 'java'
+apply plugin: 'application'
 
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+mainClassName = 'uk.co.rodderscode.bbc.Fetcher'
+sourceSets.main.java.srcDirs = ['src']
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.json', name: 'json', version: '20170516'
-}
-
 jar {
     baseName = 'BBCFetcher'
     version =  '0.1.0'
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.json', name: 'json', version: '20170516'
 }
