--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-group 'uk.co.rodderscode.bbc.fetcher'
+group 'main.java.bbc.fetcher'
 version '1.0'
 
 apply plugin: 'java'
@@ -6,7 +6,7 @@ apply plugin: 'application'
 
 
 mainClassName = 'uk.co.rodderscode.bbc.Fetcher'
-sourceSets.main.java.srcDirs = ['src']
+sourceSets.main.java.srcDirs = ['src/main/java']
 
 repositories {
     mavenCentral()
